Finish static pages

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,2 +1,18 @@
-<h1>StaticPages#about</h1>
-<p>Find me in app/views/static_pages/about.html.erb</p>
+<% provide(:title, 'About Jordan') %>
+<h1>About Jordan Rich</h1>
+
+<p>Jordan grew up in the real estate business with his father being a prominent agent and broker in the DC area.  From a young 
+age, Jordan was exposed to real estate and understands how the business and market works.  With Jordan’s early interest in 
+real estate and business, joining Long and Foster seemed like a perfect fit.  Since becoming a Realtor, Jordan has developed 
+relationships with some of DC’s most-renowned builders and developers.  As a 6th generation Washingtonian, Jordan enjoys 
+seeing the city grow and develop.</p>
+
+<p>Jordan firmly believes that each step of the any real estate transaction should be smooth and painless.  
+He emphasizes the importance of developing a relationship with each client to make sure their individual needs are met.  
+This tenet of his philosophy was learned when he became co-owner of one of DC’s most-prominent entertainment companies, 
+Escapist Entertainment, over ten years ago.  Service is paramount and the clients’ needs are at the center of the company’s 
+philosophy.  Jordan extends this same ideology into the realm of real estate.</p>
+
+<p>Before becoming a Realtor, Jordan attended the University of Maryland, College Park, where he received a bachelor’s degree 
+in Government and Politics with a Minor in Technology Entrepreneurship.  He was awarded “Entrepreneur of the Year” and 
+served as a leader in the Hinman CEO’s program where he worked on many start-up ventures.</p>
