Finish layout and routes

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,4 +1,5 @@
 <% provide(:title, 'About Jordan') %>
+<div class="container">
 <h1>About Jordan Rich</h1>
 
 <p>Jordan grew up in the real estate business with his father being a prominent agent and broker in the DC area.  From a young 
@@ -15,4 +16,4 @@ philosophy.  Jordan extends this same ideology into the realm of real estate.</p
 
 <p>Before becoming a Realtor, Jordan attended the University of Maryland, College Park, where he received a bachelor’s degree 
 in Government and Politics with a Minor in Technology Entrepreneurship.  He was awarded “Entrepreneur of the Year” and 
-served as a leader in the Hinman CEO’s program where he worked on many start-up ventures.</p>
+served as a leader in the Hinman CEO’s program where he worked on many start-up ventures.</p></div>
