--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,12 +1,19 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import url(http://fonts.googleapis.com/css?family=Alex+Brush);
 
 /* mixins and variables */
 
 $pale-grey: #f6f6f6;
 
+@mixin box_sizing {
+  -moz-box-sizing:    border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing:         border-box;
+}
+
 body{
-	padding-top: 80px;
+	padding-top: 100px;
 	padding-bottom: 20px;
 	background-color: $pale-grey;
 }
@@ -16,4 +23,37 @@ body{
 .navbar-inverse{
 	background-color: $pale-grey;
 	border: none;
+}
+
+.navbar-brand{
+	font-family: 'Alex Brush', cursive;
+	font-size: 50px;
+	margin-top: 10px;
+}
+
+/* forms */
+
+#error_explanation {
+  color: red;
+  ul {
+    color: red;
+    margin: 0 0 30px 0;
+  }
+}
+
+.field_with_errors {
+  @extend .has-error;
+  .form-control {
+    color: $state-danger-text;
+  }
+}
+
+/* miscellaneous */
+
+.debug_dump {
+  clear: both;
+  float: left;
+  width: 100%;
+  margin-top: 45px;
+  @include box_sizing;
 }
