--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,7 +15,16 @@
 					<li><%= link_to "About Jordan",   about_path %></li>
 					<li><%= link_to "Sellers",   '#' %></li>
 					<li><%= link_to "Listings",   '#' %></li>
-          <li><%= link_to "Log in", '#' %></li>
+					<% if logged_in? %>
+					<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">
+					Account <b class="caret"></b></a>
+					<ul class="dropdown-menu">
+					<li>Add a listing</li>
+					<li><%= link_to "Log out", logout_path, method: "delete" %></li>
+					</ul></li>
+					<% else %>
+          <li><%= link_to "Log in", login_path %></li>
+					<% end %>
         </ul>
         </div><!--/.navbar-collapse -->
       </div>
