--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,13 +13,14 @@
         <ul class="nav navbar-nav pull-right">
           <li><%= link_to "Home", root_path %></li>
 					<li><%= link_to "About Jordan",   about_path %></li>
-					<li><%= link_to "Sellers",   '#' %></li>
+					<li><%= link_to "Sellers",   sellers_path %></li>
 					<li><%= link_to "Listings",   '#' %></li>
+					<li><%= link_to "Contact", contact_path %></li>
 					<% if logged_in? %>
 					<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">
 					Account <b class="caret"></b></a>
 					<ul class="dropdown-menu">
-					<li>Add a listing</li>
+					<li><a href="#">Add a listing</a></li>
 					<li><%= link_to "Log out", logout_path, method: "delete" %></li>
 					</ul></li>
 					<% else %>
