--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, 'About Jordan') %>
 <div class="container">
-<h1>About Jordan Rich</h1>
-
+<!--<h1>About Jordan Rich</h1>-->
+<%= image_tag("headshot.jpg", alt: "Jordan Rich", class: "img-responsive float-left") %>
 <p>Jordan grew up in the real estate business with his father being a prominent agent and broker in the DC area.  From a young 
 age, Jordan was exposed to real estate and understands how the business and market works.  With Jordan’s early interest in 
 real estate and business, joining Long and Foster seemed like a perfect fit.  Since becoming a Realtor, Jordan has developed 
