--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,27 +1,29 @@
 <% provide(:title, 'Home') %>
 <div class="jumbotron">
       <div class="container">
-        <h1>Rich's Estates</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <p><a class="btn btn-primary btn-lg" role="button">Learn more &raquo;</a></p>
+        <p>Full-width slideshow here (need better photos)</p>
       </div>
     </div>
 		<div class="container">
 		      <!-- Example row of columns -->
 		      <div class="row">
 		        <div class="col-md-4">
-		          <h2>Heading</h2>
-		          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+		          <h2>The Rich Difference</h2>
+		          <p>Jordan Rich is a sixth generation Washingtonian with DC in his blood. The Rich family passion for DC began when the family started Rich's Shoes over one hundred years ago. The store was a DC landmark from 1894 until finally closing in 1987. Like his family before him, Jordan has dedicated himself to DC and, although not selling shoes, he gives the same Rich-level of service to all of his clients as they embark on the home buying and selling process. He understands both the emotional and business side of the transaction and has started two other business ventures that have provided him with insight into negotiation and how to cater to clients’ needs.  He also utilizes the latest technology to ensure a smooth and favorable outcome on behalf of his clients.</p>
 		          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
 		        </div>
 		        <div class="col-md-4">
-		          <h2>Heading</h2>
-		          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+		          <h2>Featured Listing</h2>
+		          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. 
+							Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+							Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
 		          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
 		       </div>
 		        <div class="col-md-4">
-		          <h2>Heading</h2>
-		          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+		          <h2>Dick Jokes</h2>
+		          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
+							Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+							Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
 		          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
 		        </div>
 		      </div>
