--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,9 +1,28 @@
 <% provide(:title, 'Home') %>
-<div class="jumbotron">
-      <div class="container">
-        <p>Full-width slideshow here (need better photos)</p>
-      </div>
-    </div>
+<script>
+$('.carousel').carousel({
+  interval: 2000
+})</script>
+
+			<!--begin bg-carousel-->
+			<div id="bg-fade-carousel" class="carousel slide carousel-fade" data-ride="carousel">
+			<!-- Wrapper for slides -->
+			    <div class="carousel-inner">
+			        <div class="item active">
+			            <div class="slide1"></div>
+			        </div>
+			        <div class="item">
+			            <div class="slide2"></div>
+			        </div>
+			        <div class="item">
+			            <div class="slide3"></div>
+			        </div>
+			        <div class="item">
+			            <div class="slide4"></div>
+			        </div>
+			    </div><!-- .carousel-inner --> 
+			</div><!-- .carousel --> 
+			
 		<div class="container">
 		      <!-- Example row of columns -->
 		      <div class="row">
