--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -4,6 +4,7 @@
 /* mixins and variables */
 
 $pale-grey: #f6f6f6;
+$white: #fff;
 
 @mixin box_sizing {
   -moz-box-sizing:    border-box;
@@ -14,7 +15,7 @@ $pale-grey: #f6f6f6;
 body{
 	padding-top: 100px;
 	padding-bottom: 20px;
-	background-color: $pale-grey;
+	background-color: $white;
 }
 
 /*h1{
@@ -27,10 +28,15 @@ h2{
 	color: #777777;
 }
 
+blockquote{
+	font-size: 15px;
+	font-style: italic;
+}
+
 /* navigation and header */
 
 .navbar-inverse{
-	background-color: $pale-grey;
+	background-color: $white;
 	border: none;
 }
 
@@ -44,14 +50,66 @@ h2{
 	margin-top: 10px;
 }
 
+.navbar-inverse.navbar-nav li a:hover{
+	color: #777;
+}
+
 /* jumbotron */
 
 .jumbotron{
-	background-image: url(image_path('cambria.jpg'));
-	background-size: cover;
+	/*background-image: url(image_path('cambria.jpg'));
+	background-size: cover;*/
 	height: 300px;
 	color: #fff;
 }
+
+.slide1, .slide2, .slide3, .slide4 {
+	min-height: 450px; /* Must have a height or min-height set due to use of background images */
+	background-size: cover;
+	/*background-position: center center;*/
+}
+.slide1 {
+	background-image: url(image_path('cambria.jpg'));
+}
+.slide2 {
+	background-image: url(image_path('slide02.jpg'));
+}
+.slide3 {
+	background-image: url(image_path('slide03.jpg'));
+}
+
+.slide4 {
+	background-image: url(image_path('slide04.jpg'));
+}
+/* Carousel Fade Effect */
+.carousel.carousel-fade .item {
+	-webkit-transition: opacity 1s linear;
+	-moz-transition: opacity 1s linear;
+	-ms-transition: opacity 1s linear;
+	-o-transition: opacity 1s linear;
+	transition: opacity 1s linear;
+	opacity: .5;
+}
+.carousel.carousel-fade .active.item {
+	opacity: 1;
+}
+.carousel.carousel-fade .active.left,
+.carousel.carousel-fade .active.right {
+	left: 0;
+	z-index: 2;
+	opacity: 0;
+	filter: alpha(opacity=0);
+}
+
+/* Carousel Overlay 
+.carousel-overlay {
+	position: absolute;
+	bottom: 100px;
+	right: 0;
+	left: 0;
+}*/
+
+
 
 /* forms */
 
@@ -145,4 +203,8 @@ footer ul li {
   width: 100%;
   margin-top: 45px;
   @include box_sizing;
+}
+
+.table-responsive{
+	padding-top: 20px;
 }
