--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -7,7 +7,14 @@
 			      <li><%= link_to "About Jordan",  about_path %></li>
 			      <li><%= link_to "Sellers", sellers_path %></li>
 						<li><%= link_to "Listings", listings_path %></li>
-						<li><%= link_to "Contact", contact_path %></li></ul>
+						<li><%= link_to "Testimonials", testimonials_path %></li>
+						<li><%= link_to "Contact", contact_path %></li>
+						<% if logged_in? %>
+						<li><%= link_to "Log out", logout_path, method: "delete" %></li>
+						<% else %>
+	          <li><%= link_to "Log in", login_path %></li>
+						<% end %>
+					</ul>
 			  </nav>
 		</footer>
 	</body>
