--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,21 +12,21 @@
         <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav pull-right">
           <li><%= link_to "Home", root_path %></li>
-					<li><%= link_to "About Jordan",   about_path %></li>
-					<li><%= link_to "Sellers",   sellers_path %></li>
-					<li><%= link_to "Listings",   '#' %></li>
-					<li><%= link_to "Contact", contact_path %></li>
-					<% if logged_in? %>
 					<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">
-					Account <b class="caret"></b></a>
+					About <b class="caret"></b></a>
 					<ul class="dropdown-menu">
-					<li><a href="#">Add a listing</a></li>
-					<li><%= link_to "Log out", logout_path, method: "delete" %></li>
-					</ul></li>
-					<% else %>
-          <li><%= link_to "Log in", login_path %></li>
-					<% end %>
-        </ul>
+					<li><%= link_to "Jordan",   about_path %></li>
+					<li><%= link_to "Preferred Vendors", vendors_path %></li></ul></li>
+					
+					<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">
+					Sales <b class="caret"></b></a>
+					<ul class="dropdown-menu">
+					<li><%= link_to "Buyers", '#' %></li>
+					<li><%= link_to "Sellers",   sellers_path %></li></ul></li>
+					<li><%= link_to "Listings",   '#' %></li>
+					<li><%= link_to "Testimonials", testimonials_path %></li>
+					<li><%= link_to "Contact", contact_path %></li>
+					</ul>
         </div><!--/.navbar-collapse -->
       </div>
     </div>
