--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,9 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="<%=root_path %>">Rich's Estates</a>
+          <a class="navbar-brand" href="<%=root_path %>">
+					<%= image_tag("richs-estates-logo.png", alt:"Rich's Estates", height: "100", width: "186", class: "img-responsive") %>
+					</a>
         </div>
         <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav pull-right">
@@ -38,3 +40,4 @@
         </div><!--/.navbar-collapse -->
       </div>
     </div>
+			<div class="container">
