--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -16,6 +16,7 @@
 						<% end %>
 					</ul>
 			  </nav>
+				<%= image_tag("realtor-equal-housing.png", alt: "Realtor Association and Equal Housing Logo", height: "58", width: "81", class: "img-responsive float-left footer-img") %>
 		</footer>
 	</body>
 </html>
