--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -4,9 +4,12 @@
 /* mixins and variables */
 
 $pale-grey: #f6f6f6;
+$grey: #455567;
 $white: #fff;
-$blue: #004add;
+$blue: #002957;
+$dark-blue: #001e3f;
 $red: #CC0000;
+$black: #000000;
 
 @mixin box_sizing {
   -moz-box-sizing:    border-box;
@@ -14,14 +17,30 @@ $red: #CC0000;
   box-sizing:         border-box;
 }
 
+html {
+  position: relative;
+  min-height: 100%;
+}
+
 body{
 	padding-top: 100px;
 	padding-bottom: 20px;
 	background-color: $white;
+	margin-bottom: 200px;
 }
 
 .container{
 	max-width: 1170px;
+}
+
+.main{
+	margin-top: 20px;
+}
+
+.homepage-boxes{
+	margin-top: 10px;
+	border-top: 2px solid $blue;
+	border-bottom: 2px solid $blue;
 }
 
 /*h1{
@@ -31,41 +50,75 @@ body{
 h2{
 	font-family: 'Alex Brush', cursive;
 	font-size: 35px;
-	color: #777777;
+	color: $grey;
 }
 
 blockquote{
 	font-size: 15px;
 	font-style: italic;
+	width: 75%;
 }
 
 /* navigation and header */
 
-.navbar-inverse{
-	background-color: $blue /*$white*/;
-	border: none;
-}
-
-.navbar-inverse .navbar-nav li a{
-	color: $white;
-}
+$bgDefault      : #e74c3c;
+$bgHighlight    : #c0392b;
+$colDefault     : #ccc;
+$colHighlight       : #ffbbbc;
 
 .navbar-fixed-top{
 	height: 105px;
 }
-
-.navbar-collapse li a{
-	text-align: center;
-}
-
-.navbar-brand{
-	font-family: 'Alex Brush', cursive;
-	font-size: 70px;
-	margin-top: -10px;
-}
-
-.navbar-inverse.navbar-nav li a:hover{
-	color: #777;
+.navbar-inverse {
+  background-color: $white;
+  border-color: $pale-grey;
+  font-weight: bold;
+  .navbar-brand {
+    color: $colDefault;
+    &:hover, &:focus { 
+      color: $colHighlight; }}
+  .navbar-text {
+    color: $grey; }
+  .navbar-nav {
+    > li {
+      > a {
+        color: $grey;
+		border-top: 3px solid $white;
+        &:hover,  &:focus {
+          color: #999; 
+		  border-top: 3px solid #777;
+	  }}}
+    > .active {
+      > a, > a:hover, > a:focus {
+        color: $colHighlight;
+        background-color: $pale-grey; }}
+    > .open {
+      > a, > a:hover, > a:focus {
+        color: $grey;
+        background-color: $pale-grey; }}}
+  .navbar-toggle {
+    border-color: $grey;
+	background-color: $grey;
+    &:hover, &:focus {
+      background-color: $blue; }
+    .icon-bar {
+      background-color: $pale-grey; }}
+  .navbar-collapse,
+  .navbar-form {border-color: $white!important;}
+  .navbar-link {
+    color: $colDefault;
+    &:hover {
+      color: $colHighlight; }}}
+@media (max-width: 767px) {
+  .navbar-default .navbar-nav .open .dropdown-menu {
+    > li > a {
+      color: $colDefault;
+      &:hover, &:focus {
+        color: $colHighlight; }}
+    > .active {
+      > a, > a:hover, > a:focus, {
+        color: $colHighlight;
+        background-color: $bgHighlight; }}}
 }
 
 /* jumbotron */
@@ -169,34 +222,63 @@ input {
 
 /* footer */
 
-footer {
+/*footer {
   margin: 45px 10px 0 10px;
   padding-top: 5px;
   border-top: 1px solid #eaeaea;
   color: #777;
-}
+}*/
 
 footer a {
-  color: #555;
+  color: #999;
 }
 
 footer a:hover {
-  color: #222;
+  color: $pale-grey;
+  text-decoration: none;
 }
 
 footer small {
+  margin-top: 10px;
   float: left;
 }
 
 footer ul {
   float: right;
   list-style: none;
+  margin-top: 10px;
+  margin-right: -15px;
 }
 
 footer ul li {
   float: left;
   margin-left: 15px;
   font-size: .9em;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 200px;
+  background-color: $grey;
+  color: #999;
+  border-bottom: 12px solid $blue;
+}
+
+.footer-contact{
+	
+}
+
+.footer-copyright{
+	background-color: $blue;
+	height: 30px;
+	width: 100%;
+	/*bottom: 0;*/
+	margin-bottom: -40px;
+	color: $pale-grey;
+	text-align: center;
 }
 
 /* images */
@@ -214,6 +296,11 @@ footer ul li {
 	clear: both;
 }
 
+.rich-logo{
+	padding: 2px;
+	background-color: $white;
+}
+
 /* miscellaneous */
 
 .debug_dump {
@@ -226,4 +313,10 @@ footer ul li {
 
 .table-responsive{
 	padding-top: 20px;
+}
+
+/* buttons */
+
+a.btn-default{
+	background-color: $pale-grey;
 }
