--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
-
+</div>
 		<footer class="footer">
-			<small><p>&copy; Rich's Estates 2014</p></small>
+		<div class="container">
 			<nav>
 			    <ul>
 					  <li><%= link_to "Home", root_path %></li>
@@ -15,8 +15,21 @@
 	          <li><%= link_to "Log in", login_path %></li>
 						<% end %>
 					</ul>
-			  </nav>
-				<%= image_tag("realtor-equal-housing.png", alt: "Realtor Association and Equal Housing Logo", height: "58", width: "81", class: "img-responsive float-left footer-img") %>
+			  </nav></div>
+				<div class="container">
+<div class="row col-md-4 footer-contact">
+	<address>
+	<strong>Jordan Rich</strong><br>
+  <strong>Long & Foster Real Estate, Inc.</strong><br>
+  5101 Wisconsin Avenue NW<br>
+  Washington, DC, 20015<br>
+  <abbr title="Phone">P:</abbr> (240) 338-9740<br>
+	<a href="mailto:jordan@richestates.com">jordan@richestates.com</a>
+</address></div>
+		</div>
+		<div class="container footer-copyright">
+		<small><p class="text-center">&copy; Rich's Estates 2014</p></small></div>
+		</div>
 		</footer>
 	</body>
 </html>
