--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="<%=root_path %>">
-					<%= image_tag("richs-estates-logo.png", alt:"Rich's Estates", height: "100", width: "186", class: "img-responsive") %>
+					<%= image_tag("richs-estates-logo.png", alt:"Rich's Estates", height: "145", width: "231", class: "img-responsive rich-logo") %>
 					</a>
         </div>
         <div class="navbar-collapse collapse">
@@ -40,4 +40,4 @@
         </div><!--/.navbar-collapse -->
       </div>
     </div>
-			<div class="container">
+			<div class="container main">
